# etos-suite-runner

./: .coveragerc  .gitignore  CHANGELOG.rst  Dockerfile  Dockerfile.log_listener  README.rst  pylintrc  requirements.txt  setup.cfg  test-requirements.txt  tox.ini
.github/workflows/: build-push.yml  main.yml
docs/: Makefile  conf.py  index.rst
manifests/base/: configmap.yaml  kustomization.yaml
projects/etos_suite_runner/: pylintrc  requirements.txt  setup.cfg  test-requirements.txt  tox.ini
projects/etos_suite_runner/src/etos_suite_runner/: __init__.py  __main__.py  esr.py
projects/etos_suite_runner/src/etos_suite_runner/lib/: __init__.py  esr_parameters.py  exceptions.py  executor.py  graphql.py  graphql_queries.py  log_filter.py  otel_tracing.py  runner.py  suite.py  testrun.py
projects/etos_suite_runner/tests/: __init__.py  conftest.py
projects/etos_suite_runner/tests/scenario/: __init__.py  tercc.py  test_permutations.py  test_regular.py
projects/log_listener/: requirements.txt  setup.cfg  setup.py  tox.ini
projects/log_listener/src/create_queue/: __init__.py  __main__.py
projects/log_listener/src/log_listener/: __init__.py  __main__.py  listener.py  log_subscriber.py
src/etos_suite_runner/: __init__.py  __main__.py  esr.py
src/etos_suite_runner/lib/: esr_parameters.py  executor.py  graphql.py  graphql_queries.py  log_filter.py  result_handler.py  runner.py  suite.py
tests/scenario/: tercc.py  test_permutations.py  test_regular.py
