[metadata]
name = etos_log_listener
description = Tool for listening to logs within ETOS.
author = Tobias Persson
author-email = tobias.persson@axis.com
license = Apache License, Version 2.0
long-description = file: README.rst
long-description-content-type = text/x-rst; charset=UTF-8
url = https://github.com/eiffel-community/etos-suite-runner
project-urls =
    Documentation = https://etos.readthedocs.io/
platforms = Linux
classifiers =
    Development Status :: 4 - Beta
    Programming Language :: Python :: 3
    License:: OSI Approved :: Apache Software License

[options]
zip_safe = False
packages = find:
include_package_data = True
package_dir =
    =src
# DON'T CHANGE THE FOLLOWING LINE! IT WILL BE UPDATED BY PYSCAFFOLD!
setup_requires = pyscaffold>=3.2a0,<3.3a0

install_requires =
    PyScaffold==3.2.3
	eiffellib[rabbitmq]==2.4.1
    fastapi==0.109.1
    uvicorn==0.22.0

python_requires = >=3.4

[options.packages.find]
where = src
exclude =
    tests

[options.extras_require]
testing =
    pytest
    pytest-cov

[options.entry_points]

[test]
extras = True

[tool:pytest]
addopts =
    --cov etos_suite_runner --cov-report term-missing
    --verbose
    -s
norecursedirs =
    dist
    build
    .tox
testpaths = tests

[aliases]
docs = build_sphinx

[bdist_wheel]
universal = 1

[build_sphinx]
source_dir = docs
build_dir = build/sphinx

[devpi:upload]
no-vcs = 1
formats = bdist_wheel

[flake8]
exclude =
    .tox
    build
    dist
    .eggs
    docs/conf.py

[pyscaffold]
# PyScaffold's parameters when the project was created.
# This will be used when updating. Do not change!
version = 3.2.3
package = log_listener
